Mesh and texture factories appear to be working